# ai_powered_travel_planner

./: README.md
travelplanner/: README.md  pyproject.toml
travelplanner/src/travelplanner/: crew.py  itinerary.md  main.py
travelplanner/src/travelplanner/config/: agents.yaml  tasks.yaml
